--- a/Site/Views/Home/Index.cshtml
+++ b/Site/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model Nexus.Web.Models.Contact
 
+@{
+    ViewData["Title"] = "Contato";
+}
+
 <link href="~/css/auxiliary/particles.css" rel="stylesheet">
 <script src="~/js/auxiliary/particles.js"></script>
 <script src="~/js/index.js"></script>
