--- a/Site/wwwroot/css/site.css
+++ b/Site/wwwroot/css/site.css
@@ -178,6 +178,8 @@ button {
     width: 3.5em;
     margin: 0;
     animation: MoreArrowAnimation 1.3s cubic-bezier(0.61, 0.01, 0.49, 0.8) infinite;
+    position: relative;
+    z-index: 2;
 }
 
     .main section.read-more img.arrow:hover {
@@ -234,3 +236,28 @@ section.contact .contact-form textarea {
     max-width: 100%;
     min-height: 10rem;
 }
+
+@keyframes MoreArrowAnimation {
+    0% {
+        transform: translate3d(0, 0, 1rem);
+    }
+
+    50% {
+        transform: translate3d(0, 1rem, 1rem);
+    }
+
+    100% {
+        transform: translate3d(0, 0, 1rem);
+    }
+}
+
+.modal-dialog-full {
+    margin: 0 !important;
+    min-width: 100%;
+    height: 100%;
+}
+
+    .modal-dialog-full .modal-content {
+        min-height: 100%;
+        height: 100%;
+    }
